fix: Ensure shareable links use correct domain for deployment
- Update vercel.json to explicitly set NEXT_PUBLIC_APP_URL
- Improve domain resolution in session creation API
- Ensure shareable links point to streamtalk-delta.vercel.app

--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,14 @@
     }
   },
   "env": {
-    "NEXT_PUBLIC_APP_URL": "https://streamtalk.vercel.app"
+    "NEXT_PUBLIC_APP_URL": "https://streamtalk-delta.vercel.app"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_APP_URL": "https://streamtalk.vercel.app"
+      "NEXT_PUBLIC_APP_URL": "https://streamtalk-delta.vercel.app"
     }
   },
+  "buildCommand": "next build",
   "rewrites": [
     {
       "source": "/api/:path*",
